# backend/src/core/auth/dto/admin-data.dto.ts
@@ -1,5 +1,4 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { enumKeysWithout } from '@shared/swagger/enum-keys-without.helper';
 import { AdminPrivileges } from '../enums/admin-privileges';
 import {
   AdminData,
@@ -7,7 +6,6 @@ import {
   AdminAvatarUrlField,
   AdminPrivilegesTranslated,
 } from '../types/admin.types';
-import { AuthVerification } from '@generated/prisma-client';
 
 export class AdminDataDto
   implements
@@ -15,33 +13,23 @@ export class AdminDataDto
     AdminPrivilegeTranslatedField,
     AdminAvatarUrlField
 {
+  // Internal static constants (ignored by Swagger)
   static readonly EXCLUDED_PRIVILEGES: (keyof typeof AdminPrivileges)[] = ['NONE'];
   static readonly SAMPLE_ADMIN_PRIVILEGES: AdminPrivilegesTranslated[] = [
     'ADMINS_MANAGE',
     'BLOG_MANAGE',
   ];
 
-  @ApiProperty({ readOnly: true, type: Number })
   readonly id!: AdminData['id'];
 
-  @ApiProperty({ readOnly: true, type: String })
   readonly displayName!: AdminData['displayName'];
 
-  @ApiProperty({ readOnly: true, type: String })
   readonly handleName!: AdminData['handleName'];
 
-  @ApiProperty({
-    readOnly: true,
-    enum: enumKeysWithout(AdminPrivileges, AdminDataDto.EXCLUDED_PRIVILEGES),
-    isArray: true,
-    example: AdminDataDto.SAMPLE_ADMIN_PRIVILEGES,
-  })
   readonly privileges!: AdminPrivilegesTranslated[];
 
-  @ApiProperty({ readOnly: true, enum: AuthVerification })
   readonly verification!: AdminData['verification'];
 
-  @ApiProperty({ readOnly: true, type: Boolean })
   readonly isActivated!: AdminData['isActivated'];
 
   @ApiProperty({
